<resources>
    <string name="app_name" translatable="false">Reader Collection</string>
    <string name="search">Search</string>
    <string name="restart">Restart</string>
    <string name="message_app_update_downloaded">An update has just been downloaded.</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have at least 6 characters</string>
    <string name="invalid_repeat_password">Passwords does not match</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username_info">This username is only needed for identification purposes and to be able to separate your books from another user\'s ones. However, due to any personal information is stored, if you forget your password you won\'t be able to retrieve it, so it\'s advisable to have a backup copy. You can create it from the Statistics screen.</string>
    <string name="wrong_credentials">Username or password are not correct</string>
    <string name="title_books">Bookshelf</string>
    <plurals name="title_books_count">
        <item quantity="one">%s available book</item>
        <item quantity="other">%s available books</item>
    </plurals>
    <string name="new_book">New</string>
    <string name="format">Format</string>
    <string name="state">State</string>
    <string name="query_title" translatable="false">\"%s\"</string>
    <string name="load_more">Load more</string>
    <string name="synchronize">Synchronize</string>
    <string name="sort">Sort</string>
    <string name="drag">Drag</string>
    <string name="pending">Pending</string>
    <string name="read">Read</string>
    <string name="show_all">Show all</string>
    <string name="no_results_text">No results found</string>
    <string name="no_search_yet_text">Search for a book in order to add it to your collection</string>
    <string name="title_search">Search</string>
    <string name="title_stats">Statistics</string>
    <string name="shorter_book">Shorter book</string>
    <string name="longer_book">Longer book</string>
    <string name="months">Months</string>
    <string name="formats">Formats</string>
    <string name="import_file">Import books</string>
    <string name="export_file">Export books</string>
    <string name="import_confirmation">Are you sure you want to IMPORT the data? This process could take a while.</string>
    <string name="export_confirmation">Are you sure you want to EXPORT the data? This process could take a while.</string>
    <string name="file_created">File created</string>
    <string name="data_imported">Data imported correctly</string>
    <string name="add_title">Add a title</string>
    <string name="add_author">Add the author(s)</string>
    <string name="description">Description</string>
    <string name="add_description">Add a description</string>
    <string name="read_more">Read more</string>
    <string name="summary">Summary</string>
    <string name="add_summary">Add a summary</string>
    <string name="select_format">Select a format</string>
    <string name="select_state">Select a state</string>
    <string name="isbn" translatable="false">ISBN</string>
    <string name="add_isbn">Add the ISBN</string>
    <string name="pages">Pages</string>
    <string name="add_pages">Add the pages</string>
    <string name="publisher">Publisher</string>
    <string name="add_publisher">Add the publisher</string>
    <string name="published_date">Published date</string>
    <string name="select_a_date">Select a date</string>
    <string name="reading_date">Reading date</string>
    <string name="book_saved">Book saved!</string>
    <string name="book_removed">Book removed!</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title_settings">Settings</string>
    <string name="account_title">Account</string>
    <string name="account_description">Manage your account</string>
    <string name="preferences">Preferences</string>
    <string name="data_sync_title">Data Synchronization</string>
    <string name="data_sync_description">Manage your data synchronization</string>
    <string name="display_settings_title">Display Settings</string>
    <string name="display_settings_description">Personalize display settings</string>
    <string name="logout_title">Logout</string>
    <string name="logout_description">Close this session</string>
    <string name="account_details_title">Account details</string>
    <string name="account_management_title">Account management</string>
    <string name="save">Save</string>
    <string name="public_profile_title">Public profile</string>
    <string name="public_profile_description">Other users will be able to search for you and see your books</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_description">Permanently delete your account and books data</string>
    <string name="delete_account_action">Delete account</string>
    <string name="syncing_options_title">Syncing options</string>
    <string name="automatic_sync_title">Automatic sync</string>
    <string name="automatic_sync_description">Your data will sync automatically once a week</string>
    <string name="manual_sync_title">Manual sync</string>
    <string name="manual_sync_description">Sync your data manually</string>
    <string name="sync_now_action">Sync now</string>
    <string name="data_sync_successfully">Your data has been successfully synced</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="app_language">App language</string>
    <string name="sort_books_param">Read books order mode</string>
    <string name="app_theme">App theme</string>
    <string-array name="app_theme_values">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="book_remove_confirmation">Are you sure you want to delete this book?</string>
    <string name="profile_delete_confirmation">Are you sure you want to delete your user? You will lose all your stored information about the books.</string>
    <string name="profile_logout_confirmation">Are you sure you want to exit?</string>
    <string name="order_by">Order by</string>
    <string-array name="sorting_param_keys" translatable="false">
        <item />
        <item>title</item>
        <item>publishedDate</item>
        <item>readingDate</item>
        <item>pageCount</item>
        <item>rating</item>
        <item>authors</item>
    </string-array>
    <string-array name="sorting_param_values">
        <item>None</item>
        <item>Title</item>
        <item>Published date</item>
        <item>Reading date</item>
        <item>Page count</item>
        <item>Rating</item>
        <item>Author(s)</item>
    </string-array>
    <string-array name="sorting_order_keys" translatable="false">
        <item />
        <item>ascending</item>
        <item>descending</item>
    </string-array>
    <string-array name="sorting_order_values">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="sync_title">Synchronizing…</string>
    <string name="sync_confirmation">Are you sure you want to sync the app? This process could take a while.</string>
    <string name="enter_valid_url">Enter a valid URL</string>
    <string name="error_server">There was an error on getting data. Please, try again.</string>
    <string name="error_search">You must provide a text to search.</string>
    <string name="error_no_book">There is no book with that id.</string>
    <string name="error_resource_found">This book is already in your collection.</string>
    <string name="error_database">There was an error with the database. Please, try again.</string>
    <string name="error_file_data">There is an error with the data format. Please, be sure data is in the correct format.</string>
    <string name="books_view_tutorial_title">This is the main screen</string>
    <string name="books_view_tutorial_description">Here you can find all the books in your collection, in 3 sections: Reading, Pending and Read</string>
    <string name="search_view_tutorial_title">This is the search screen</string>
    <string name="search_view_tutorial_description">Here you can search for new books to add to your collection</string>
    <string name="stats_view_tutorial_title">This is the statistics screen</string>
    <string name="stats_view_tutorial_description">Here you can see different statistics about all the books you have already read</string>
    <string name="settings_view_tutorial_title">This is the settings screen</string>
    <string name="settings_view_tutorial_description">Here you can modify your personal data and the app configuration</string>
    <string name="search_bar_books_tutorial_title">This is the search bar</string>
    <string name="search_bar_books_tutorial_description">Here you can search by the title for any book in your collection</string>
    <string name="sync_icon_tutorial_title">This is the synchronization button</string>
    <string name="sync_icon_tutorial_description">Here you can synchronize your data with the server, in case you have made any modification in another device</string>
    <string name="sort_icon_tutorial_title">This is the sort button</string>
    <string name="sort_icon_tutorial_description">Here you can sort the books in your collection by different values</string>
    <string name="search_bar_tutorial_title">This is the search button</string>
    <string name="search_bar_tutorial_description">Here you can search for the new books you want to add to your collection</string>
    <string name="drag_bar_tutorial_title">This is the drag and drop button</string>
    <string name="drag_bar_tutorial_description">Here you can enable the drag and drop option to sort the books</string>
    <string name="import_file_icon_tutorial_title">This is the import file button</string>
    <string name="import_file_icon_tutorial_description">Here you can import from a file all the books data you want to store in the app</string>
    <string name="export_file_icon_tutorial_title">This is the export file button</string>
    <string name="export_file_icon_tutorial_description">Here you can store in a file all your books data</string>
    <string name="save_settings_button_tutorial_title">This is the save button</string>
    <string name="save_settings_button_tutorial_description">Here you can save your personal data and the current app configuration after you modify it</string>
    <string name="delete_profile_icon_tutorial_title">This is the delete profile button</string>
    <string name="delete_profile_icon_tutorial_description">Here you can delete your profile and all the data you have created (user, password and books)</string>
    <string name="logout_icon_tutorial_title">This is the logout button</string>
    <string name="logout_icon_tutorial_description">Here you can logout, in case you want to login with a different user</string>
    <string name="add_book_icon_tutorial_title">This is the add book button</string>
    <string name="add_book_icon_tutorial_description">Here you can add this book to your collection</string>
    <string name="add_image_button_tutorial_title">This is the add image button</string>
    <string name="add_image_button_tutorial_description">Here you can add or change the book image. To do so, you must introduce the image link (http://…) that you should look for beforehand</string>
</resources>