<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Sergio Aragonés. All rights reserved.
  ~ Created by Sergio Aragonés on 19/10/2020
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import
            type="aragones.sergio.readercollection.utils.CustomInputType"
            />

        <variable
            name="fragment"
            type="aragones.sergio.readercollection.ui.login.LoginFragment"
            />

        <variable
            name="viewModel"
            type="aragones.sergio.readercollection.ui.login.LoginViewModel"
            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment"
        >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:src="@drawable/login_register_image"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <include
            android:id="@+id/text_input_layout_username"
            layout="@layout/custom_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_24dp"
            app:labelHintText="@{@string/username}"
            app:inputType="@{CustomInputType.TEXT}"
            app:enabled="@{true}"
            app:text="@{viewModel.username}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            />

        <include
            android:id="@+id/text_input_layout_password"
            layout="@layout/custom_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:labelHintText="@{@string/password}"
            app:inputType="@{CustomInputType.PASSWORD}"
            app:enabled="@{true}"
            app:endIconSrc="@{@drawable/ic_show_password}"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_username"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_username"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_username"
            />

        <Button
            android:id="@+id/button_login"
            android:layout_width="@dimen/size_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:enabled="@{viewModel.loginFormState.isDataValid}"
            android:onClick="@{() -> fragment.login()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
            app:layout_constraintVertical_bias="1.0"
            style="@style/Widget.ReaderCollection.Button.Main"
            />

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:text="@string/not_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.ReaderCollection.TextView.Subtitle.Main"
            />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:text="@string/create_account"
            android:onClick="@{() -> fragment.goToRegister()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_register"
            style="@style/Widget.ReaderCollection.TextButton.Main.Action"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>